[1]:feat - add pagination, support for directories and crud operations